Adding Second Iteration In the root :rocket:

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,6 @@
   <name>OSMPathFinder</name>
   <modules>
   	<module>OSMPathFinder-DonwloadNewMap</module>
+  	<module>OSMPathFinder-ChooseExistingMap</module>
   </modules>
 </project>
