Added Iteration 4th :inbox_tray: :100:

--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
   	<module>OSMPathFinder-DonwloadNewMap</module>
   	<module>OSMPathFinder-ChooseExistingMap</module>
   	<module>OSMPathFinder-DefineNewSearch</module>
+  	<module>OSMPathFinder-ExecuteSearch</module>
   </modules>
 </project>
