--- a/OSMPathFinder-DefineNewSearch/pom.xml
+++ b/OSMPathFinder-DefineNewSearch/pom.xml
@@ -22,5 +22,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.cr.jee</groupId>
+    	<artifactId>OSMPathFinder-DonwloadNewMap</artifactId>
+    	<version>0.1-SNAPSHOT</version>
+    	<scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
